--- a/class 3.html
+++ b/class 3.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" />
     <title>Table</title>
     <style>
+	    table{background-color:aliceblue;}
 	table,
 	th,
       td {
         padding: 20px;
-        border: 4px solid black;
+        border: 2px solid black;
         border-collapse: collapse;
         text-align: center;
-		color:red;
+		color:black;
       }
     </style>
   </head>
